--- a/login.html
+++ b/login.html
@@ -16,11 +16,11 @@
     <div class="form-floating mb-3">
        
     <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="emailInput" value="email" placeholder="name@example.com">
+        <input type="email" class="form-control" id="emailInput" value="" placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="PasswordInput" value= "password"placeholder="Password">
+        <input type="password" class="form-control" id="PasswordInput" value= ""placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
       <div class="m-3">
