--- a/signUp.html
+++ b/signUp.html
@@ -22,11 +22,11 @@
         <label for="floatingInput">last name</label>
       </div>
     <div class="form-floating mb-3">
-        <input type="email" class="form-control" id="emailInput" value="" placeholder="name@example.com">
+        <input type="email" class="form-control" id="emailInput"  placeholder="name@example.com">
         <label for="floatingInput">Email address</label>
       </div>
       <div class="form-floating mb-3">
-        <input type="password" class="form-control" id="PasswordInput" value= ""placeholder="Password">
+        <input type="password" class="form-control" id="PasswordInput" placeholder="Password">
         <label for="floatingPassword">Password</label>
       </div>
       <div class="m-3">
